force-app/main/default/objects/ContentVersion/fields/ExternalRecordID__c.field-meta.xml
<CustomField>
    <fullName>ExternalRecordID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>