force-app/main/default/objects/ContentVersion/fields/SharePoint_FileId__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_FileId__c</fullName>
    <label>SharePoint FileId</label>
    <type>TextArea</type>
</CustomField>