force-app/main/default/objects/ContentVersion/fields/SharePoint_Parent_FolderId__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Parent_FolderId__c</fullName>
    <label>SharePoint Parent FolderId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>